@@ -111,6 +111,14 @@ const impTodos = [{
   separator: ';',
   backslash: true
 }, {
+  id: 'csv6',
+  data: tu.makePathUnix('js/common/test-data/import/import-6.csv'),
+  coll: 'UnitTestsImportCsv6',
+  type: 'csv',
+  create: 'true',
+  separator: ',',
+  ignoreMissing: true
+}, {
   id: 'csvnoconvert',
   data: tu.makePathUnix('js/common/test-data/import/import-noconvert.csv'),
   coll: 'UnitTestsImportCsvNoConvert',
@@ -169,22 +177,6 @@ const impTodos = [{
 }];
 
 function importing (options) {
-  if (options.cluster) {
-    if (options.extremeVerbosity) {
-      print('Skipped because of cluster.');
-    }
-
-    return {
-      'failed': 0,
-      'importing': {
-        'failed': 0,
-        'status': true,
-        'message': 'skipped because of cluster',
-        'skipped': true
-      }
-    };
-  }
-
   let instanceInfo = pu.startInstance('tcp', options, {}, 'importing');
 
   if (instanceInfo === false) {
