@@ -1,6 +1,10 @@
 v3.3.1 (XXXX-XX-XX)
 -------------------
 
+* added `--ignore-missing` option to arangoimp
+  this option allows importing lines with less fields than specified in the CSV
+  header line
+
 * optimize usage of AQL FULLTEXT index function to a FOR loop with index
   usage in some cases
   When the optimization is applied, this especially speeds up fulltext index 
